# MIARFID

./: README.md
RFA/: README.md  conv notebook.ipynb  metodos no parametricos.ipynb  mlp notebook.ipynb  modelos lineales.ipynb  modelos preentrenados notebook.ipynb
SMA/: README.md  main.py  pyproject.toml
SMA/alianza/: agent.py
SMA/subasta_1/: agent.py
SMA/subasta_2/: agent.py
SMA/subasta_holandesa/: agent.py
SMA/subasta_holandesa_multistock/: agent.py
SMA/subasta_inglesa/: agent.py
SMA/subasta_inglesa_infiltrado/: agent.py
SMA/subasta_japonesa/: agent.py
SMA/subasta_sobre_primero/: agent.py
SMA/subasta_sobre_segundo/: agent.py
TLH/: README.md
TLH/Proyecto/: pyproject.toml
TLH/Proyecto/BPE/: main.ipynb
TLH/Proyecto/CLS/: main.ipynb
TLH/Proyecto/Encoder Bert/: main.ipynb
TLH/Proyecto/PostNorm/: main.ipynb
TLH/Proyecto/PostNorm CLS/: main.ipynb
TLH/Proyecto/PreNorm/: main.ipynb
TLH/Proyecto/Stemmer/: main.ipynb
TLH/Proyecto/Visualizar Embeddings/: initial_data.csv  trained_data.csv  visualizador.py
TLH/TLH_whisper/: ejercicios2_final.ipynb
Tecnicas Metaheuristicas/: README.md  ag_final.ipynb  ag_test.ipynb  enfriamiento_simulado_final.ipynb  enfriamiento_simulado_test.ipynb
Traduccion Automatica/: README.md
Traduccion Automatica/TA_Lab1-main/: alia_finetune.py  alia_prompting.py  baseline_nllb.py  finetune_llama.py  finetune_mistral.py  finetune_nllb.py  finetune_qwen.py  finetune_qwen_dora.py  latxa_finetune.py  latxa_prompting.py  latxa_prompting_beam.py  latxa_prompting_sample.py  latxa_prompting_sample_2.py  (+3 more)
(+35 files in other folders)
