[project]
name = "tlh-trabajo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "protobuf>=6.33.4",
    "pypdf>=6.6.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.5",
    "pdfplumber>=0.11.0",
    "streamlit>=1.40.0",
    "plotly>=5.18.0",
    "pandas>=2.2.0",
        
]
